# const-decimal

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  flake.nix
.github/workflows/: ci.yml
.github/workflows/actions/rust-toolchain/: action.yml
benches/: add.rs  div.rs  fpdec_comparison.rs  main.rs  mul.rs  sub.rs  to_f64.rs  vs_fpdec.rs
crates/const-decimal/: Cargo.toml
crates/const-decimal/benches/: add.rs  div.rs  mul.rs  sub.rs  to_f64.rs
crates/const-decimal/src/: algorithms.rs  aliases.rs  cheats.rs  conversion.rs  decimal.rs  full_mul_div.rs  integer.rs  lib.rs  macros.rs  scaled_integer.rs
crates/const-decimal/src/foreign_traits/: borsh.rs  malachite.rs
crates/decimal/: Cargo.toml
crates/decimal-shared/: Cargo.toml
crates/decimal-shared/src/: integer.rs
crates/decimal/benches/: main.rs  to_f64.rs
crates/decimal/src/: decimal.rs  lib.rs  scaling_factor.rs
crates/dyn-decimal/: Cargo.toml
src/: cheats.rs  const_traits.rs  conversion.rs  decimal.rs  display.rs  from.rs  full_mul_div.rs  fuzz.rs  integer.rs  lib.rs  macros.rs  mul_div.rs  ops.rs  traits.rs
src/foreign_traits/: arbitrary.rs  borsh.rs  malachite.rs  mod.rs  proptest.rs
