[package]
name = "const-decimal"
description = "Integer-backed decimals with constant precision"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Oliver Chalk"]
readme = "README.md"
repository = "https://github.com/OliverNChalk/const-decimal"
homepage = "https://github.com/OliverNChalk/const-decimal"
keywords = ["decimal", "math", "finance"]
categories = ["finance", "mathematics"]

[lints.clippy]
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
# See `clippy.toml`.
disallowed_methods = "warn"
get_first = "allow"
inline-always = "allow"
match_bool = "allow"
missing_const_for_fn = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
needless-raw-string-hashes = "allow"
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
todo = "warn"
too_many_lines = "allow"
trivially_copy_pass_by_ref = "warn"

[features]
serde = ["dep:serde"]
borsh = ["dep:borsh"]
malachite = ["dep:malachite"]

[dependencies]
borsh = { version = "1.5.1", features = ["derive"], optional = true }
malachite = { version = "0.4.16", optional = true }
num-traits = "0.2.19"
paste = "1.0.15"
ruint = "1.12.3"
serde = { version = "~1.0", features = ["derive"], optional = true }
thiserror = "1.0.63"

[dev-dependencies]
criterion = "0.5.1"
expect-test = "1.5.0"
fpdec = "0.11.0"
malachite = "0.4.16"
proptest = "1.5.0"

[profile.release]
opt-level = 3
debug = true

[profile.paranoid]
inherits = "release"
overflow-checks = true
debug-assertions = true

[profile.performance]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[[bench]]
name = "main"
path = "benches/main.rs"
harness = false

[[bench]]
name = "fpdec_comparison"
path = "benches/fpdec_comparison.rs"
harness = false
