[package]
name = "decimal-shared"
description = "Integer-backed decimals with dynamic precision"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Oliver Chalk"]
readme = "README.md"
repository = "https://github.com/OliverNChalk/const-decimal"
homepage = "https://github.com/OliverNChalk/const-decimal"
keywords = ["decimal", "math", "finance"]
categories = ["finance", "mathematics"]

[dependencies]
num-traits = { workspace = true }
