[package]
name = "decimal"
description = "Integer-backed decimals"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Oliver Chalk"]
readme = "README.md"
repository = "https://github.com/OliverNChalk/const-decimal"
homepage = "https://github.com/OliverNChalk/const-decimal"
keywords = ["decimal", "math", "finance"]
categories = ["finance", "mathematics"]

[lints.clippy]
pedantic = "warn"

# See `clippy.toml`.
disallowed_methods = "warn"
arithmetic_side_effects = "warn"
match_bool = "allow"
module_name_repetitions = "allow"

[dependencies]
decimal-shared = { workspace = true }

[dev-dependencies]

[[bench]]
name = "main"
path = "benches/main.rs"
harness = false
